--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Распределённое Хранилище Для Информации в Виде ДНК — Терминал</title>
+  <title>Терминал — Распределённое Хранилище Для Информации в Виде ДНК</title>
   <style>
     /* Скрыть скроллбары */
     ::-webkit-scrollbar { width: 0; height: 0; }
@@ -17,15 +17,55 @@
       overflow: hidden;
     }
     .terminal {
-      display: flex;
-      flex-direction: column;
+      position: relative;
+      display: flex; flex-direction: column;
       height: 100%;
-      padding-bottom: 60px; /* пространство для input-area */
+      padding-bottom: 60px; /* под input-area */
     }
+
+    /* Индикаторы пиров под "Translucent Blurred Glass" */
+    .indicators {
+      position: absolute;
+      top: 0; left: 0; right: 0; bottom: 60px;
+      pointer-events: none;
+      background: rgba(30,30,30,0.4);
+      backdrop-filter: blur(8px);
+      overflow: hidden;
+      z-index: 1;
+    }
+    .node {
+      position: absolute;
+      display: flex;
+      align-items: center;
+      animation: float 6s ease-in-out infinite;
+    }
+    .node .dot {
+      width: 12px; height: 12px;
+      border-radius: 50%;
+      margin-right: 6px;
+      background: gray;
+      box-shadow: 0 0 8px rgba(0,0,0,0.5);
+    }
+    .node .info {
+      font-size: 0.75rem;
+      line-height: 1.2;
+      color: #eee;
+      background: rgba(0,0,0,0.6);
+      padding: 4px 6px;
+      border-radius: 4px;
+    }
+    @keyframes float {
+      0%,100% { transform: translate(0,0); }
+      50% { transform: translate(0,8px); }
+    }
+
+    /* Вывод команд */
     .output {
+      position: relative;
+      z-index: 2;
       flex: 1;
       overflow-y: auto;
-      padding: 20px;
+      padding: 16px;
       line-height: 1.4;
     }
     .output .line {
@@ -33,74 +73,77 @@
       word-break: break-all;
       margin: 2px 0;
     }
+
+    /* Панель ввода */
     .input-area {
       position: fixed;
-      bottom: 0; left: 0;
-      width: 100%;
+      bottom: 0; left: 0; right: 0;
       height: 60px;
       background: #252526;
-      display: flex;
-      align-items: center;
+      display: flex; align-items: center;
       padding: 0 10px;
-      box-shadow: 0 -2px 6px rgba(0,0,0,0.5);
+      box-shadow: 0px 1px 1px 0px rgba(0,0,0,0.5);
+      z-index: 3;
     }
     .options {
-      display: flex;
-      gap: 6px;
+      display: flex; gap: 6px;
+      height: 100%;
     }
-    .options.left  { margin-right: 10px; }
-    .options.right { margin-left: 10px; }
+    .options.left  { margin-right: 1.25%; }
+    .options.right { margin-left: 1.25%; }
     .options label {
       position: relative;
       display: inline-block;
+      height: 100%;
     }
     .options input {
       position: absolute;
-      opacity: 0;
-      pointer-events: none;
-    }
-    .options input:checked + .option {
-      background: #0e639c;
-      color: #fff;
+      opacity: 0; pointer-events: none;
     }
     .option {
-      display: inline-block;
-      padding: 6px 10px;
+      display: flex; align-items: center; justify-content: center;
+      height: 100%; padding: 0 12px;
       border-radius: 4px;
-      background: #3c3c3c;
-      color: #ccc;
-      cursor: pointer;
-      transition: background .2s, color .2s;
+      background: #3c3c3c; color: #ccc;
+      cursor: pointer; transition: background .2s, color .2s;
       font-size: 0.9rem;
     }
     .option:hover {
       background: #505050;
     }
+    .options input:checked + .option {
+      background: #0e639c; color: #fff;
+    }
     #cmdInput {
       flex: 1;
       background: transparent;
-      border: none;
-      outline: none;
-      color: #eee;
-      font-size: 1rem;
-      padding: 8px;
-      caret-color: #0e639c;
+      border: none; outline: none;
+      color: #eee; font-size: 1rem;
+      padding: 8px; caret-color: #0e639c;
     }
-    #cmdInput::placeholder {
-      color: #777;
-    }
+    #cmdInput::placeholder { color: #777; }
     @media (max-width: 600px) {
       .options { display: none; }
       .input-area { padding: 0 5px; }
     }
   </style>
+
+  <!-- UMD-библиотеки Helia -->
+  <script src="https://cdn.jsdelivr.net/npm/helia@3.0.0/dist/index.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@helia/unixfs@2.0.0/dist/index.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/datastore-core@9.0.3/dist/index.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/blockstore-core@4.1.0/dist/index.min.js"></script>
 </head>
 <body>
   <div class="terminal">
+    <!-- ПОДСТИЛКА С ИНДИКАТОРАМИ -->
+    <div class="indicators" id="indicators"></div>
+
+    <!-- КОНСОЛЬНЫЙ ВЫВОД -->
     <div class="output" id="output"></div>
 
+    <!-- ПАНЕЛЬ ВВОДА -->
     <div class="input-area">
-      <!-- Левые селекты -->
       <div class="options left">
         <label><input type="radio" name="left" value="dna"><span class="option">DNA</span></label>
         <label><input type="radio" name="left" value="text"><span class="option">TEXT</span></label>
@@ -108,11 +151,7 @@
         <label><input type="radio" name="left" value="load"><span class="option">LOAD</span></label>
         <label><input type="radio" name="left" value="help"><span class="option">HELP</span></label>
       </div>
-
-      <!-- Поле ввода -->
       <input id="cmdInput" type="text" placeholder="Введите команду…"/>
-
-      <!-- Правые селекты -->
       <div class="options right">
         <label><input type="radio" name="right" value="node"><span class="option">NODE</span></label>
         <label><input type="radio" name="right" value="upload"><span class="option">UPLD</span></label>
@@ -124,67 +163,157 @@
   </div>
 
   <script>
+  (async()=>{
     const outputEl = document.getElementById('output');
-    const inputEl = document.getElementById('cmdInput');
-    // Функция для вывода строки
-    function writeLine(text = '') {
-      const div = document.createElement('div');
-      div.className = 'line';
-      div.textContent = text;
-      outputEl.appendChild(div);
+    const indEl    = document.getElementById('indicators');
+    const inputEl  = document.getElementById('cmdInput');
+
+    // Сборные множества пиров
+    const peers = {};
+
+    function writeLine(text='') {
+      const line = document.createElement('div');
+      line.className = 'line';
+      line.textContent = text;
+      outputEl.appendChild(line);
       outputEl.scrollTop = outputEl.scrollHeight;
     }
-    // Приветственное сообщение
-    writeLine('Распределённое Хранилище Для Информации в Виде ДНК — Терминал');
-    writeLine('Введите "help" для списка команд.');
+
+    // Создаём визуальный индикатор для пира
+    function addPeerIndicator(id) {
+      if (peers[id]) return;
+      const node = document.createElement('div');
+      node.className = 'node';
+      // рандомная позиция
+      node.style.left = (10 + Math.random()*80) + '%';
+      node.style.top  = (10 + Math.random()*70) + '%';
+
+      const dot  = document.createElement('div');
+      dot.className = 'dot';
+      node.appendChild(dot);
+
+      const info = document.createElement('div');
+      info.className = 'info';
+      info.innerHTML = `ID: ${id.slice(0,6)}<br>status: discovered`;
+      node.appendChild(info);
+
+      indEl.appendChild(node);
+      peers[id] = { node, dot, info, quality: 0 };
+    }
+
+    // Обновляем цвет и текст индикатора
+    function updatePeerIndicator(id, status) {
+      const p = peers[id];
+      if (!p) return;
+      const { dot, info } = p;
+      let color;
+      if (status === 'connected') { color = '#2ecc71'; }
+      else if (status === 'disconnected') { color = '#e74c3c'; }
+      else { color = '#f1c40f'; }
+      dot.style.background = color;
+      p.quality = status === 'connected' ? 100 : 50;
+      info.innerHTML = `ID: ${id.slice(0,6)}<br>status: ${status}`;
+    }
+
+    // Удаляем индикатор
+    function removePeerIndicator(id) {
+      const p = peers[id];
+      if (p) {
+        indEl.removeChild(p.node);
+        delete peers[id];
+      }
+    }
 
     // Обработчик ввода
     inputEl.addEventListener('keydown', async e => {
-      if (e.key === 'Enter') {
-        const cmd = inputEl.value.trim();
-        if (!cmd) return;
-        writeLine('> ' + cmd);
-        inputEl.value = '';
-        // Простейшая реализация команд
-        const [c, arg] = cmd.split(' ');
-        switch (c.toLowerCase()) {
-          case 'help':
-            writeLine('Команды: help, encode <text>, decode <dna>, clear');
-            break;
-          case 'encode':
-            if (arg) {
-              // Пример: кодируем
-              const dna = [...new TextEncoder().encode(arg)].map(b=>{
-                const bits = b.toString(2).padStart(8,'0');
-                return bits.match(/.{1,2}/g).map(p=>{
-                  return {'00':'A','01':'C','10':'G','11':'T'}[p];
-                }).join('');
-              }).join('');
-              writeLine(dna);
-            } else {
-              writeLine('Использование: encode <text>');
-            }
-            break;
-          case 'decode':
-            if (arg) {
-              const bits = arg.split('').map(n=>{
-                return {'A':'00','C':'01','G':'10','T':'11'}[n]||'';
-              }).join('');
-              const bytes = new Uint8Array(bits.match(/.{1,8}/g).map(b=>parseInt(b,2)));
-              const txt = new TextDecoder().decode(bytes);
-              writeLine(txt);
-            } else {
-              writeLine('Использование: decode <dna>');
-            }
-            break;
-          case 'clear':
-            outputEl.innerHTML = '';
-            break;
-          default:
-            writeLine(`Неизвестная команда: ${c}`);
-        }
+      if (e.key !== 'Enter') return;
+      const full = inputEl.value.trim();
+      if (!full) return;
+      writeLine('> ' + full);
+      inputEl.value = '';
+
+      const [cmd, ...rest] = full.split(' ');
+      const arg = rest.join(' ');
+
+      switch (cmd.toLowerCase()) {
+        case 'help':
+          writeLine('help — список команд');
+          writeLine('encode <text> — текст→DNA');
+          writeLine('decode <dna> — DNA→текст');
+          writeLine('node start/stop/peers — управление узлом');
+          writeLine('clear — очистить экран');
+          break;
+
+        case 'encode':
+          if (!arg) return writeLine('Исп: encode <text>');
+          const dna = [...new TextEncoder().encode(arg)]
+            .map(b=>b.toString(2).padStart(8,'0')
+              .match(/.{1,2}/g)
+              .map(p=>({'00':'A','01':'C','10':'G','11':'T'}[p]))
+              .join(''))
+            .join('');
+          writeLine(dna);
+          break;
+
+        case 'decode':
+          if (!arg) return writeLine('Исп: decode <dna>');
+          const bits = arg.split('').map(n=>({'A':'00','C':'01','G':'10','T':'11'}[n]||'')).join('');
+          const bytes = new Uint8Array(bits.match(/.{1,8}/g).map(b=>parseInt(b,2)));
+          writeLine(new TextDecoder().decode(bytes));
+          break;
+
+        case 'clear':
+          outputEl.innerHTML = '';
+          break;
+
+        case 'node':
+          if (arg === 'start') {
+            writeLine('Запуск Helia-узла…');
+            const { createHelia }      = Helia;
+            const { unixfs }           = HeliaUnixfs;
+            const { MemoryDatastore }  = DatastoreCore;
+            const { MemoryBlockstore } = BlockstoreCore;
+            const ds = new MemoryDatastore();
+            const bs = new MemoryBlockstore();
+            const helia = await createHelia({ datastore: ds, blockstore: bs });
+            const fs    = await unixfs(helia);
+            writeLine('Узел запущен, ID: ' + await helia.libp2p.peerId.toString());
+
+            helia.libp2p.addEventListener('peer:discovery', e=>{
+              const id = e.detail.id.toString();
+              addPeerIndicator(id);
+            });
+            helia.libp2p.addEventListener('peer:connect', e=>{
+              const id = e.detail.toString();
+              updatePeerIndicator(id, 'connected');
+            });
+            helia.libp2p.addEventListener('peer:disconnect', e=>{
+              const id = e.detail.toString();
+              updatePeerIndicator(id, 'disconnected');
+              setTimeout(()=> removePeerIndicator(id), 5000);
+            });
+          }
+          else if (arg === 'stop') {
+            writeLine('Остановка узла…');
+            // нет доступа к helia в this scope, просто очищаем
+            Object.keys(peers).forEach(removePeerIndicator);
+            writeLine('Узел остановлен');
+          }
+          else if (arg === 'peers') {
+            writeLine(`Peers: ${Object.keys(peers).length}`);
+          }
+          else writeLine('Исп: node <start|stop|peers>');
+          break;
+
+        default:
+          writeLine(`Неизвестная команда: ${cmd}`);
       }
     });
+
+    // Приветствие
+    writeLine('Терминал ДНК-Хранилища запущен');
+    writeLine('Введите "help" для списка команд.');
+  })();
   </script>
 </body>
 </html>
