--- a/i7.html
+++ b/i7.html
@@ -65,16 +65,16 @@
       margin: 4px 0;
     }
     .dna-seq span {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      width: 140px;  /* шире для лучшей читаемости */
-      height: 70px;
-      margin-right: 2px;
-      font-size: 1.25rem;
-      font-weight: bold;
-      color: #fff;
-      border-radius: 4px;
+     display: flex;
+     align-items: center;
+     justify-content: center;
+     width: 186px;
+     height: 70px;
+     margin-right: 5px;
+     font-size: 4.25rem;
+     font-weight: bold;
+     color: #fff;
+     border-radius: 4px;
     }
     .dna-A { background: #4caf50; }
     .dna-C { background: #2196f3; }
