--- a/i7.html
+++ b/i7.html
@@ -155,7 +155,7 @@
     @media (max-width:600px) {
       .options { display: none; }
       .input-area { padding: 0 5px; }
-    }
+    }circle {fill: #333333;}
   </style>
 </head>
 <body>
