--- a/i7.html
+++ b/i7.html
@@ -221,7 +221,7 @@
 
       // Создание групп для линий и узлов
       const linkGroup = svg.append('g')
-        .attr('stroke', 'rgba(100,200,250,0.2)')
+        .attr('stroke', 'rgb(59 59 59 / 20%)')    //LINES
         .attr('stroke-width', 1);
       const nodeGroup = svg.append('g');
 
