--- a/i7.html
+++ b/i7.html
@@ -68,10 +68,11 @@
      display: flex;
      align-items: center;
      justify-content: center;
-     width: 186px;
+     width: 195px;
      height: 70px;
      margin-right: 5px;
-     font-size: 4.25rem;
+     font-size: 6rem;
+     padding: 10px;
      font-weight: bold;
      color: #fff;
      border-radius: 4px;
